# UMR_DATA

./: .gitignore  README.md  admintool.py  annotator_gateway.py  buglist,md  foley_worker.py  inference_server.py  plan.md  plan_2.md  pyproject.toml  run_gateway.bash  run_inference_server.bash  server.py
data/: video_statuses.json
data/Zhenhao_Wang/: annotations.jsonl
data/alice/: annotations.jsonl
data/ck/: annotations.jsonl
data/zll/: annotations.jsonl
frp_client/: frpc_infer.toml
logs/: gateway.pid
static/: app.js  index.html  styles.css
tests/: test_split_servers.py
